# etl-project

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
src/: main.py
src/config/: settings.py
src/config/constants/: __init__.py  utils_constant.py
src/config/metadata/: __init__.py
src/config/metadata/uk/: __init__.py  business.py  consumer.py  labour.py  price.py  trade.py
src/config/metadata/usa/: __init__.py  business.py  consumer.py  labour.py  money.py  price.py  trade.py
src/monitoring/exc_models/: __init__.py  base_exc.py
src/pipeline/: orchestrator.py
src/pipeline/calculation/: __init__.py  calculate.py
src/pipeline/parsers/: __init__.py  registry.py
src/pipeline/parsers/bea/: __init__.py  quarterly_s_a.py
src/pipeline/parsers/bls/: monthly.py
src/pipeline/parsers/fred/: __init__.py  monthly.py
src/pipeline/processors/: data.py  date.py  indicator.py  parse.py  raw.py  standardized.py
src/pipeline/routing/: __init__.py  fetch_manage.py  model.py  parse.py  parser_manage.py  raw.py
src/providers/: metamodel.py
src/providers/bea/: __init__.py  fetch.py
src/providers/bls/: __init__.py  fetch.py
src/providers/fred/: __init__.py  fetch.py
src/upload/postegres/: load.py  psql.py
tests/unit/: test_parse_monthly_bls.py  test_parse_monthly_fred.py  test_parse_quarterly_s_a.py  test_raw.py
tests/unit/providers/: test_fetch_bea.py  test_fetch_bls.py  test_fetch_fred.py
