[project]
name = "workspace-analysis"
version = "0.1.0"
description = "Analysis"
authors = [{ name = "arx", email = "araswandi0@gmail.com" }]
license = { text = "proprietary" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "textual (>=6.5.0,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "objexplore (>=1.6.3,<2.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pyright (>=1.1.407,<2.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
